@@ -1,3 +1,9 @@
+Fri May 14 20:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Tools/pldes.m: new tool to deserialise serialised property lists.
+	* Tools/plser.m: new tool to serialise text property lists.
+	* Tools/GNUmakefile: add pldes and plser
+
 Mon May 11  15:00:00 1999  Manuel Guesdon <mguesdon@sbuilders.com>
 
         * Source/NSArray.m: getObjects: (id*)aBuffer range: (NSRange)aRange
